force-app/main/default/objects/Contact/fields/Send_email__c.field-meta.xml
<CustomField>
    <fullName>Send_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send email</label>
    <type>Checkbox</type>
</CustomField>